Finalizing the web